--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,5 +3,10 @@ services:
   app:
     build: .
     container_name: lab1
+    deploy:
+      resources:
+        limits:
+          cpus: "1"
+          memory: "64M"
     ports:
       - "80:80"
